--- a/src/styles.css
+++ b/src/styles.css
@@ -125,5 +125,18 @@ img.socialIcon {
 }
 /* add an even more amazing and better animation to the social icons */
 img.socialIcon:hover {
-  animation: spin 1s infinite;
+  animation: bounce 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
